@@ -842,6 +842,8 @@ else:
 #    commonEnvironment.Append(LIBS = ['lo'])
     pluginLibraries.append(oscEnvironment.SharedLibrary('osc',
                                                         ['Opcodes/OSC.c']))
+    pluginLibraries.append(oscEnvironment.SharedLibrary('oscrecv',
+                                                        ['InOut/OSCrecv.c']))
 
 # FLUIDSYNTH OPCODES
 
